vlib/v/checker/tests/fn_call_arg_mismatch_err_e.vv
fn f(x int) {
	println(x)
}

fn main() {
	x := u32(2251797157)
	println(x)
	f(x)
}
